correccion de rama main a trunk

--- a/product-service-v1-application.yaml
+++ b/product-service-v1-application.yaml
@@ -11,7 +11,7 @@ spec:
   source: 
     path: product-service-v1
     repoURL: "https://github.com/javierWill08/product-service-v1.git"
-    targetRevision: main
+    targetRevision: trunk
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
