--- a/product-service-v1-application.yaml
+++ b/product-service-v1-application.yaml
@@ -9,7 +9,7 @@ spec:
     server: "https://kubernetes.default.svc"
   project: default
   source: 
-    path: product-service-v1
+    #path: product-service-v1
     repoURL: "https://github.com/javierWill08/product-service-v1.git"
     targetRevision: trunk
   syncPolicy:
